Source/MessageContractsParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 lokad-codedsl\\Source\\MessageContracts.g 2013-03-21 08:11:24

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;
using ConditionalAttribute = System.Diagnostics.ConditionalAttribute;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  MessageContracts 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class MessageContractsParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BlockToken", "COMMENT", "CONST", "CommandToken", "DisctionaryToken", "ESC_SEQ", "EXPLICIT", "EXTERN", "EntityDefinition", "EventToken", "ExternToken", "FragmentEntry", "FragmentGroup", "FragmentReference", "HEX_DIGIT", "ID", "IF", "INT", "INTERFACE", "MemberToken", "Modifier", "ModifierDefinition", "NAMESPACE", "NamespaceToken", "OCTAL_ESC", "STRING", "StringRepresentationToken", "TemplateToken", "TypeToken", "UNICODE_ESC", "USING", "UsingToken", "WS", "'('", "')'", "','", "'.'", "';'", "'='", "'{'", "'}'"
	};
	public const int EOF=-1;
	public const int T__37=37;
	public const int T__38=38;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int BlockToken=4;
	public const int COMMENT=5;
	public const int CONST=6;
	public const int CommandToken=7;
	public const int DisctionaryToken=8;
	public const int ESC_SEQ=9;
	public const int EXPLICIT=10;
	public const int EXTERN=11;
	public const int EntityDefinition=12;
	public const int EventToken=13;
	public const int ExternToken=14;
	public const int FragmentEntry=15;
	public const int FragmentGroup=16;
	public const int FragmentReference=17;
	public const int HEX_DIGIT=18;
	public const int ID=19;
	public const int IF=20;
	public const int INT=21;
	public const int INTERFACE=22;
	public const int MemberToken=23;
	public const int Modifier=24;
	public const int ModifierDefinition=25;
	public const int NAMESPACE=26;
	public const int NamespaceToken=27;
	public const int OCTAL_ESC=28;
	public const int STRING=29;
	public const int StringRepresentationToken=30;
	public const int TemplateToken=31;
	public const int TypeToken=32;
	public const int UNICODE_ESC=33;
	public const int USING=34;
	public const int UsingToken=35;
	public const int WS=36;

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false, false, false, false, false, 
				false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public MessageContractsParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public MessageContractsParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		OnCreated();
	}
	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return MessageContractsParser.tokenNames; } }
	public override string GrammarFileName { get { return "lokad-codedsl\\Source\\MessageContracts.g"; } }


	[Conditional("ANTLR_TRACE")]
	protected virtual void OnCreated() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule(string ruleName, int ruleIndex) {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule(string ruleName, int ruleIndex) {}

	#region Rules

	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_program() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_program() {}

	// $ANTLR start "program"
	// lokad-codedsl\\Source\\MessageContracts.g:32:1: program : ( declaration )+ ;
	[GrammarRule("program")]
	private AstParserRuleReturnScope<object, IToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
	    AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    object root_0 = default(object);

	    AstParserRuleReturnScope<object, IToken> declaration1 = default(AstParserRuleReturnScope<object, IToken>);


		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(32, 1);
		try
		{
			// lokad-codedsl\\Source\\MessageContracts.g:33:2: ( ( declaration )+ )
			DebugEnterAlt(1);
			// lokad-codedsl\\Source\\MessageContracts.g:33:4: ( declaration )+
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(33, 4);
			// lokad-codedsl\\Source\\MessageContracts.g:33:4: ( declaration )+
			int cnt1=0;
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, decisionCanBacktrack[1]);
				int LA1_0 = input.LA(1);

				if ((LA1_0==CONST||LA1_0==EXTERN||(LA1_0>=ID && LA1_0<=IF)||LA1_0==INTERFACE||LA1_0==NAMESPACE||LA1_0==USING))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch (alt1)
				{
				case 1:
					DebugEnterAlt(1);
					// lokad-codedsl\\Source\\MessageContracts.g:33:4: declaration
					{
					DebugLocation(33, 4);
					PushFollow(Follow._declaration_in_program121);
					declaration1=declaration();
					PopFollow();

					adaptor.AddChild(root_0, declaration1.Tree);

					}
					break;

				default:
					if (cnt1 >= 1)
						goto loop1;

					EarlyExitException eee1 = new EarlyExitException( 1, input );
					DebugRecognitionException(eee1);
					throw eee1;
				}
				cnt1++;
			}
			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
	    }
	 	DebugLocation(34, 1);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_declaration() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_declaration() {}

	// $ANTLR start "declaration"
	// lokad-codedsl\\Source\\MessageContracts.g:36:1: declaration : ( modifier_declaration | frag_declaration | type_declaration | entity_declaration | namespace_declaration | extern_declaration | template_declaration | using_declaration );
	[GrammarRule("declaration")]
	private AstParserRuleReturnScope<object, IToken> declaration()
	{
		EnterRule_declaration();
		EnterRule("declaration", 2);
		TraceIn("declaration", 2);
	    AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    object root_0 = default(object);

	    AstParserRuleReturnScope<object, IToken> modifier_declaration2 = default(AstParserRuleReturnScope<object, IToken>);
	    AstParserRuleReturnScope<object, IToken> frag_declaration3 = default(AstParserRuleReturnScope<object, IToken>);
	    AstParserRuleReturnScope<object, IToken> type_declaration4 = default(AstParserRuleReturnScope<object, IToken>);
	    AstParserRuleReturnScope<object, IToken> entity_declaration5 = default(AstParserRuleReturnScope<object, IToken>);
	    AstParserRuleReturnScope<object, IToken> namespace_declaration6 = default(AstParserRuleReturnScope<object, IToken>);
	    AstParserRuleReturnScope<object, IToken> extern_declaration7 = default(AstParserRuleReturnScope<object, IToken>);
	    AstParserRuleReturnScope<object, IToken> template_declaration8 = default(AstParserRuleReturnScope<object, IToken>);
	    AstParserRuleReturnScope<object, IToken> using_declaration9 = default(AstParserRuleReturnScope<object, IToken>);


		try { DebugEnterRule(GrammarFileName, "declaration");
		DebugLocation(36, 1);
		try
		{
			// lokad-codedsl\\Source\\MessageContracts.g:37:2: ( modifier_declaration | frag_declaration | type_declaration | entity_declaration | namespace_declaration | extern_declaration | template_declaration | using_declaration )
			int alt2=8;
			try { DebugEnterDecision(2, decisionCanBacktrack[2]);
			switch (input.LA(1))
			{
			case IF:
				{
				alt2 = 1;
				}
				break;
			case CONST:
				{
				alt2 = 2;
				}
				break;
			case ID:
				{
				int LA2_3 = input.LA(2);

				if ((LA2_3==42))
				{
					alt2 = 7;
				}
				else if ((LA2_3==Modifier||LA2_3==37))
				{
					alt2 = 3;
				}
				else
				{
					NoViableAltException nvae = new NoViableAltException("", 2, 3, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case INTERFACE:
				{
				alt2 = 4;
				}
				break;
			case NAMESPACE:
				{
				alt2 = 5;
				}
				break;
			case EXTERN:
				{
				alt2 = 6;
				}
				break;
			case USING:
				{
				alt2 = 8;
				}
				break;
			default:
				{
					NoViableAltException nvae = new NoViableAltException("", 2, 0, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// lokad-codedsl\\Source\\MessageContracts.g:37:4: modifier_declaration
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(37, 4);
				PushFollow(Follow._modifier_declaration_in_declaration134);
				modifier_declaration2=modifier_declaration();
				PopFollow();

				adaptor.AddChild(root_0, modifier_declaration2.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// lokad-codedsl\\Source\\MessageContracts.g:38:4: frag_declaration
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(38, 4);
				PushFollow(Follow._frag_declaration_in_declaration139);
				frag_declaration3=frag_declaration();
				PopFollow();

				adaptor.AddChild(root_0, frag_declaration3.Tree);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// lokad-codedsl\\Source\\MessageContracts.g:39:4: type_declaration
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(39, 4);
				PushFollow(Follow._type_declaration_in_declaration144);
				type_declaration4=type_declaration();
				PopFollow();

				adaptor.AddChild(root_0, type_declaration4.Tree);

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// lokad-codedsl\\Source\\MessageContracts.g:40:4: entity_declaration
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(40, 4);
				PushFollow(Follow._entity_declaration_in_declaration149);
				entity_declaration5=entity_declaration();
				PopFollow();

				adaptor.AddChild(root_0, entity_declaration5.Tree);

				}
				break;
			case 5:
				DebugEnterAlt(5);
				// lokad-codedsl\\Source\\MessageContracts.g:41:4: namespace_declaration
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(41, 4);
				PushFollow(Follow._namespace_declaration_in_declaration154);
				namespace_declaration6=namespace_declaration();
				PopFollow();

				adaptor.AddChild(root_0, namespace_declaration6.Tree);

				}
				break;
			case 6:
				DebugEnterAlt(6);
				// lokad-codedsl\\Source\\MessageContracts.g:42:4: extern_declaration
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(42, 4);
				PushFollow(Follow._extern_declaration_in_declaration160);
				extern_declaration7=extern_declaration();
				PopFollow();

				adaptor.AddChild(root_0, extern_declaration7.Tree);

				}
				break;
			case 7:
				DebugEnterAlt(7);
				// lokad-codedsl\\Source\\MessageContracts.g:43:4: template_declaration
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(43, 4);
				PushFollow(Follow._template_declaration_in_declaration165);
				template_declaration8=template_declaration();
				PopFollow();

				adaptor.AddChild(root_0, template_declaration8.Tree);

				}
				break;
			case 8:
				DebugEnterAlt(8);
				// lokad-codedsl\\Source\\MessageContracts.g:44:4: using_declaration
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(44, 4);
				PushFollow(Follow._using_declaration_in_declaration170);
				using_declaration9=using_declaration();
				PopFollow();

				adaptor.AddChild(root_0, using_declaration9.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("declaration", 2);
			LeaveRule("declaration", 2);
			LeaveRule_declaration();
	    }
	 	DebugLocation(45, 1);
		} finally { DebugExitRule(GrammarFileName, "declaration"); }
		return retval;

	}
	// $ANTLR end "declaration"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_namespace_declaration() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_namespace_declaration() {}

	// $ANTLR start "namespace_declaration"
	// lokad-codedsl\\Source\\MessageContracts.g:47:1: namespace_declaration : NAMESPACE ( ID ( '.' ID )* ) ';' -> ^( NamespaceToken ( ID )* ) ;
	[GrammarRule("namespace_declaration")]
	private AstParserRuleReturnScope<object, IToken> namespace_declaration()
	{
		EnterRule_namespace_declaration();
		EnterRule("namespace_declaration", 3);
		TraceIn("namespace_declaration", 3);
	    AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    object root_0 = default(object);

	    IToken NAMESPACE10 = default(IToken);
	    IToken ID11 = default(IToken);
	    IToken char_literal12 = default(IToken);
	    IToken ID13 = default(IToken);
	    IToken char_literal14 = default(IToken);

	    object NAMESPACE10_tree = default(object);
	    object ID11_tree = default(object);
	    object char_literal12_tree = default(object);
	    object ID13_tree = default(object);
	    object char_literal14_tree = default(object);
	    RewriteRuleITokenStream stream_41=new RewriteRuleITokenStream(adaptor,"token 41");
	    RewriteRuleITokenStream stream_40=new RewriteRuleITokenStream(adaptor,"token 40");
	    RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
	    RewriteRuleITokenStream stream_NAMESPACE=new RewriteRuleITokenStream(adaptor,"token NAMESPACE");

		try { DebugEnterRule(GrammarFileName, "namespace_declaration");
		DebugLocation(47, 28);
		try
		{
			// lokad-codedsl\\Source\\MessageContracts.g:48:5: ( NAMESPACE ( ID ( '.' ID )* ) ';' -> ^( NamespaceToken ( ID )* ) )
			DebugEnterAlt(1);
			// lokad-codedsl\\Source\\MessageContracts.g:48:7: NAMESPACE ( ID ( '.' ID )* ) ';'
			{
			DebugLocation(48, 7);
			NAMESPACE10=(IToken)Match(input,NAMESPACE,Follow._NAMESPACE_in_namespace_declaration184);  
			stream_NAMESPACE.Add(NAMESPACE10);

			DebugLocation(48, 17);
			// lokad-codedsl\\Source\\MessageContracts.g:48:17: ( ID ( '.' ID )* )
			DebugEnterAlt(1);
			// lokad-codedsl\\Source\\MessageContracts.g:48:18: ID ( '.' ID )*
			{
			DebugLocation(48, 18);
			ID11=(IToken)Match(input,ID,Follow._ID_in_namespace_declaration187);  
			stream_ID.Add(ID11);

			DebugLocation(48, 21);
			// lokad-codedsl\\Source\\MessageContracts.g:48:21: ( '.' ID )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, decisionCanBacktrack[3]);
				int LA3_0 = input.LA(1);

				if ((LA3_0==40))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// lokad-codedsl\\Source\\MessageContracts.g:48:22: '.' ID
					{
					DebugLocation(48, 22);
					char_literal12=(IToken)Match(input,40,Follow._40_in_namespace_declaration190);  
					stream_40.Add(char_literal12);

					DebugLocation(48, 26);
					ID13=(IToken)Match(input,ID,Follow._ID_in_namespace_declaration192);  
					stream_ID.Add(ID13);


					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }


			}

			DebugLocation(48, 32);
			char_literal14=(IToken)Match(input,41,Follow._41_in_namespace_declaration197);  
			stream_41.Add(char_literal14);



			{
			// AST REWRITE
			// elements: ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 49:5: -> ^( NamespaceToken ( ID )* )
			{
				DebugLocation(49, 8);
				// lokad-codedsl\\Source\\MessageContracts.g:49:8: ^( NamespaceToken ( ID )* )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(49, 10);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(NamespaceToken, "NamespaceToken"), root_1);

				DebugLocation(49, 25);
				// lokad-codedsl\\Source\\MessageContracts.g:49:25: ( ID )*
				while ( stream_ID.HasNext )
				{
					DebugLocation(49, 25);
					adaptor.AddChild(root_1, stream_ID.NextNode());

				}
				stream_ID.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("namespace_declaration", 3);
			LeaveRule("namespace_declaration", 3);
			LeaveRule_namespace_declaration();
	    }
	 	DebugLocation(49, 28);
		} finally { DebugExitRule(GrammarFileName, "namespace_declaration"); }
		return retval;

	}
	// $ANTLR end "namespace_declaration"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_using_declaration() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_using_declaration() {}

	// $ANTLR start "using_declaration"
	// lokad-codedsl\\Source\\MessageContracts.g:51:1: using_declaration : USING ( ID ( '.' ID )* ) ';' -> ^( UsingToken ( ID )* ) ;
	[GrammarRule("using_declaration")]
	private AstParserRuleReturnScope<object, IToken> using_declaration()
	{
		EnterRule_using_declaration();
		EnterRule("using_declaration", 4);
		TraceIn("using_declaration", 4);
	    AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    object root_0 = default(object);

	    IToken USING15 = default(IToken);
	    IToken ID16 = default(IToken);
	    IToken char_literal17 = default(IToken);
	    IToken ID18 = default(IToken);
	    IToken char_literal19 = default(IToken);

	    object USING15_tree = default(object);
	    object ID16_tree = default(object);
	    object char_literal17_tree = default(object);
	    object ID18_tree = default(object);
	    object char_literal19_tree = default(object);
	    RewriteRuleITokenStream stream_41=new RewriteRuleITokenStream(adaptor,"token 41");
	    RewriteRuleITokenStream stream_40=new RewriteRuleITokenStream(adaptor,"token 40");
	    RewriteRuleITokenStream stream_USING=new RewriteRuleITokenStream(adaptor,"token USING");
	    RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");

		try { DebugEnterRule(GrammarFileName, "using_declaration");
		DebugLocation(51, 24);
		try
		{
			// lokad-codedsl\\Source\\MessageContracts.g:52:5: ( USING ( ID ( '.' ID )* ) ';' -> ^( UsingToken ( ID )* ) )
			DebugEnterAlt(1);
			// lokad-codedsl\\Source\\MessageContracts.g:52:7: USING ( ID ( '.' ID )* ) ';'
			{
			DebugLocation(52, 7);
			USING15=(IToken)Match(input,USING,Follow._USING_in_using_declaration227);  
			stream_USING.Add(USING15);

			DebugLocation(52, 13);
			// lokad-codedsl\\Source\\MessageContracts.g:52:13: ( ID ( '.' ID )* )
			DebugEnterAlt(1);
			// lokad-codedsl\\Source\\MessageContracts.g:52:14: ID ( '.' ID )*
			{
			DebugLocation(52, 14);
			ID16=(IToken)Match(input,ID,Follow._ID_in_using_declaration230);  
			stream_ID.Add(ID16);

			DebugLocation(52, 17);
			// lokad-codedsl\\Source\\MessageContracts.g:52:17: ( '.' ID )*
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, decisionCanBacktrack[4]);
				int LA4_0 = input.LA(1);

				if ((LA4_0==40))
				{
					alt4 = 1;
				}


				} finally { DebugExitDecision(4); }
				switch ( alt4 )
				{
				case 1:
					DebugEnterAlt(1);
					// lokad-codedsl\\Source\\MessageContracts.g:52:18: '.' ID
					{
					DebugLocation(52, 18);
					char_literal17=(IToken)Match(input,40,Follow._40_in_using_declaration233);  
					stream_40.Add(char_literal17);

					DebugLocation(52, 22);
					ID18=(IToken)Match(input,ID,Follow._ID_in_using_declaration235);  
					stream_ID.Add(ID18);


					}
					break;

				default:
					goto loop4;
				}
			}

			loop4:
				;

			} finally { DebugExitSubRule(4); }


			}

			DebugLocation(52, 28);
			char_literal19=(IToken)Match(input,41,Follow._41_in_using_declaration240);  
			stream_41.Add(char_literal19);



			{
			// AST REWRITE
			// elements: ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 53:5: -> ^( UsingToken ( ID )* )
			{
				DebugLocation(53, 8);
				// lokad-codedsl\\Source\\MessageContracts.g:53:8: ^( UsingToken ( ID )* )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(53, 10);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(UsingToken, "UsingToken"), root_1);

				DebugLocation(53, 21);
				// lokad-codedsl\\Source\\MessageContracts.g:53:21: ( ID )*
				while ( stream_ID.HasNext )
				{
					DebugLocation(53, 21);
					adaptor.AddChild(root_1, stream_ID.NextNode());

				}
				stream_ID.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("using_declaration", 4);
			LeaveRule("using_declaration", 4);
			LeaveRule_using_declaration();
	    }
	 	DebugLocation(53, 24);
		} finally { DebugExitRule(GrammarFileName, "using_declaration"); }
		return retval;

	}
	// $ANTLR end "using_declaration"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_frag_declaration() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_frag_declaration() {}

	// $ANTLR start "frag_declaration"
	// lokad-codedsl\\Source\\MessageContracts.g:56:1: frag_declaration : CONST ID '=' ID ID ';' -> ^( FragmentEntry ID ID ID ) ;
	[GrammarRule("frag_declaration")]
	private AstParserRuleReturnScope<object, IToken> frag_declaration()
	{
		EnterRule_frag_declaration();
		EnterRule("frag_declaration", 5);
		TraceIn("frag_declaration", 5);
	    AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    object root_0 = default(object);

	    IToken CONST20 = default(IToken);
	    IToken ID21 = default(IToken);
	    IToken char_literal22 = default(IToken);
	    IToken ID23 = default(IToken);
	    IToken ID24 = default(IToken);
	    IToken char_literal25 = default(IToken);

	    object CONST20_tree = default(object);
	    object ID21_tree = default(object);
	    object char_literal22_tree = default(object);
	    object ID23_tree = default(object);
	    object ID24_tree = default(object);
	    object char_literal25_tree = default(object);
	    RewriteRuleITokenStream stream_42=new RewriteRuleITokenStream(adaptor,"token 42");
	    RewriteRuleITokenStream stream_41=new RewriteRuleITokenStream(adaptor,"token 41");
	    RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
	    RewriteRuleITokenStream stream_CONST=new RewriteRuleITokenStream(adaptor,"token CONST");

		try { DebugEnterRule(GrammarFileName, "frag_declaration");
		DebugLocation(56, 54);
		try
		{
			// lokad-codedsl\\Source\\MessageContracts.g:57:2: ( CONST ID '=' ID ID ';' -> ^( FragmentEntry ID ID ID ) )
			DebugEnterAlt(1);
			// lokad-codedsl\\Source\\MessageContracts.g:57:4: CONST ID '=' ID ID ';'
			{
			DebugLocation(57, 4);
			CONST20=(IToken)Match(input,CONST,Follow._CONST_in_frag_declaration264);  
			stream_CONST.Add(CONST20);

			DebugLocation(57, 10);
			ID21=(IToken)Match(input,ID,Follow._ID_in_frag_declaration266);  
			stream_ID.Add(ID21);

			DebugLocation(57, 13);
			char_literal22=(IToken)Match(input,42,Follow._42_in_frag_declaration268);  
			stream_42.Add(char_literal22);

			DebugLocation(57, 17);
			ID23=(IToken)Match(input,ID,Follow._ID_in_frag_declaration270);  
			stream_ID.Add(ID23);

			DebugLocation(57, 20);
			ID24=(IToken)Match(input,ID,Follow._ID_in_frag_declaration272);  
			stream_ID.Add(ID24);

			DebugLocation(57, 23);
			char_literal25=(IToken)Match(input,41,Follow._41_in_frag_declaration274);  
			stream_41.Add(char_literal25);



			{
			// AST REWRITE
			// elements: ID, ID, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);
